add_library(sto
        Packer.cc
        TransScratch.hh
        Transaction.cc
        Transaction.hh
        TransItem.hh
        Interface.hh
        TWrapped.hh
        TRcu.cc
        ContentionManager.cc
        MVCC.hh
        VersionBase.hh
        OCCVersions.hh
        EagerVersions.hh
        TThread.hh
        ConcurrencyControl.hh
        Sto.hh
        TicTocVersions.hh
        VersionSelector.hh)
