add_executable(concurrent concurrent.cc)
add_executable(unit-tflexarray unit-tflexarray.cc)
add_executable(unit-swisstarray unit-swisstarray.cc)
add_executable(unit-tarray unit-tarray.cc)
add_executable(unit-tmvbox unit-tmvbox.cc)
add_executable(unit-tbox unit-tbox.cc)
add_executable(unit-dboindex unit-dboindex.cc)

target_link_libraries(unit-swisstarray sto dprint)
target_link_libraries(unit-tflexarray sto dprint)
target_link_libraries(unit-tbox sto dprint)
target_link_libraries(unit-tarray sto dprint)
target_link_libraries(unit-tmvbox sto dprint)
target_link_libraries(concurrent sto rd clp dprint ${PLATFORM_LIBRARIES})
target_link_libraries(unit-dboindex sto dprint db_index masstree json)
