add_executable(concurrent concurrent.cc)
add_executable(unit-tflexarray unit-tflexarray.cc)
add_executable(unit-swisstarray unit-swisstarray.cc)
add_executable(unit-tarray unit-tarray.cc)
add_executable(unit-tmvbox unit-tmvbox.cc)
add_executable(unit-tbox unit-tbox.cc)
add_executable(unit-hashtable unit-hashtable.cc)
add_executable(unit-dboindex unit-dboindex.cc)
add_executable(unit-mvcc-access-all unit-mvcc-access-all.cc)

target_link_libraries(unit-swisstarray sto dprint)
target_link_libraries(unit-tflexarray sto dprint)
target_link_libraries(unit-tbox sto dprint)
target_link_libraries(unit-tarray sto dprint)
target_link_libraries(unit-tmvbox sto dprint)
target_link_libraries(unit-hashtable sto dprint)
target_link_libraries(concurrent sto rd clp dprint ${PLATFORM_LIBRARIES})
target_link_libraries(unit-dboindex sto dprint db_index masstree json)
target_link_libraries(unit-mvcc-access-all sto dprint db_index masstree json)
